[package]
name = "rust_interop"
version = "0.2.0"
authors = ["petrSchreiber <petrschreiber@gmail.com>"]
edition = "2018"

[dependencies]
libloading = "0.5"
libc = "0.2"
ascii = "0.9.0"
winapi = { version = "0.3", features = ["winnt", "combaseapi", "oleauto", "roapi", "roerrorapi", "hstring", "winstring", "winerror", "restrictederrorinfo"] }

[lib]
name = "rust_interop"
crate-type = ["cdylib"]
